Recapitulated the code

--- a/Guide_tensorflow_object_detection_segmentation.ipynb
+++ b/Guide_tensorflow_object_detection_segmentation.ipynb
@@ -27,27 +27,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0kwYvKmVV8Pw",
-        "colab_type": "text"
-      },
-      "source": [
-        "<img height=\"45px\" src=\"https://avatars3.githubusercontent.com/u/20337240?s=460&v=4\" align=\"left\" hspace=\"10px\" vspace=\"0px\">\n",
-        "\n",
-        "<h1>ใช้ AI ตรวจจับวัตถุในรูปภาพ โดยใช้ tensorflow</h1>\n",
-        "\n",
-        "<a href='https://www.facebook.com/programmerthai'><font color='green'>สรุปและเรียบเรียงโดยโปรแกรมเมอร์ไทย thai programmer</font></a>\n",
-        "\n",
-        "<hr>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "rm2uMBkmEPwe",
         "colab_type": "text"
       },
       "source": [
-        "cite\n",
+        "# *cite*\n",
         "\n",
         "https://github.com/tensorflow/models/tree/master/research/object_detection\n",
         "\n",
@@ -525,6 +509,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6esYfBU9Qk2d",
+        "colab_type": "text"
+      },
+      "source": [
+        "All available model can be found above"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "0wncEbBfnIWa",
@@ -573,6 +567,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Tbg4PIKNQWQ-",
+        "colab_type": "text"
+      },
+      "source": [
+        "Inferencing Method"
+      ]
     },
     {
       "cell_type": "code",
@@ -696,7 +700,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Instance Segmentation (ยัง error)"
+        "# Instance Segmentation (In Progress)"
       ]
     },
     {
@@ -1051,7 +1055,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# ฝากติดตาม\n",
+        "# Guided Tutor's\n",
         "\n",
         "<img height=\"20px\" src=\"https://www.patanasongsivilai.com/blog/wp-content/uploads/2017/06/logo_facebook2.png\" align=\"left\" hspace=\"10px\" vspace=\"0px\">  https://www.facebook.com/programmerthai/\n",
         "\n",
@@ -1059,35 +1063,6 @@
         "\n",
         "<img height=\"14px\" src=\"https://www.patanasongsivilai.com/blog/wp-content/uploads/2019/09/github-2.jpg\" align=\"left\" hspace=\"10px\" vspace=\"3px\">https://github.com/adminho/machine-learning"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "or0GxbcWgjfb",
-        "colab_type": "code",
-        "cellView": "form",
-        "colab": {}
-      },
-      "source": [
-        "#@title ฝากประชาสัมพันธ์ หนังสือ AI (ปัญญาประดิษฐ์) ไม่ยาก เรียนรู้ได้ด้วยเลขม. ปลาย ราคา 295 บาท\n",
-        "%%HTML\n",
-        "<iframe src=\"https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fprogrammerthai%2Fphotos%2Fa.2410667485889755%2F2555677101388792%2F%3Ftype%3D3&width=500\" width=\"500\" height=\"588\" style=\"border:none;overflow:hidden\" scrolling=\"no\" frameborder=\"0\" allowTransparency=\"true\" allow=\"encrypted-media\"></iframe>"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "QpFzNnAdazm_",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
