--- a/Color_distinguish.ipynb
+++ b/Color_distinguish.ipynb
@@ -36,7 +36,7 @@
       "source": [
         "!wget https://4.bp.blogspot.com/-ukjUU_JJ6y0/WxVha1617oI/AAAAAAAAXr8/xrXPfl2DWyE-WdxvBct-HCLYt_cwbO5owCLcBGAs/s400/yourname-02m22s.png"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,7 +76,7 @@
         "plt.ylabel('original')\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -109,7 +109,7 @@
         "#get what x,y,color?\n",
         "print(originalImage[0][0][2])"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "e_k-pUkYO-B_",
-        "outputId": "1ebca90c-af6c-440f-a731-a5a7705d6c1c",
+        "outputId": "9caed79f-eddc-41ee-9ee7-f6a2352c2208",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -135,7 +135,7 @@
         " import colorsys\n",
         " print(colorsys.rgb_to_hls(191, 191, 191)[2])"
       ],
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,6 +155,29 @@
         "for i in range(x):\n",
         "  for j in range(y):\n",
         "    r = originalImage[i][j][0]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Yaii3-KHw1WZ"
+      },
+      "source": [
+        "def checkcolor(hue,sat,lgt):\n",
+        "  if (lgt < 0.2)  return \"Blacks\";\n",
+        "  if (lgt > 0.8)  return \"Whites\";\n",
+        "\n",
+        "  if (sat < 0.25) return \"Grays\";\n",
+        "\n",
+        "  if (hue < 30)   return \"Reds\";\n",
+        "  if (hue < 90)   return \"Yellows\";\n",
+        "  if (hue < 150)  return \"Greens\";\n",
+        "  if (hue < 210)  return \"Cyans\";\n",
+        "  if (hue < 270)  return \"Blues\";\n",
+        "  if (hue < 330)  return \"Magentas\";\n",
+        "  return \"Reds\";"
       ],
       "execution_count": null,
       "outputs": []
