--- a/Color_distinguish.ipynb
+++ b/Color_distinguish.ipynb
@@ -166,20 +166,27 @@
       },
       "source": [
         "def checkcolor(hue,sat,lgt):\n",
-        "  if (lgt < 0.2)  return \"Blacks\";\n",
-        "  if (lgt > 0.8)  return \"Whites\";\n",
-        "\n",
-        "  if (sat < 0.25) return \"Grays\";\n",
-        "\n",
-        "  if (hue < 30)   return \"Reds\";\n",
-        "  if (hue < 90)   return \"Yellows\";\n",
-        "  if (hue < 150)  return \"Greens\";\n",
-        "  if (hue < 210)  return \"Cyans\";\n",
-        "  if (hue < 270)  return \"Blues\";\n",
-        "  if (hue < 330)  return \"Magentas\";\n",
-        "  return \"Reds\";"
+        "  if (lgt < 0.2):\n",
+        "    return \"Blacks\"\n",
+        "  if (lgt > 0.8):\n",
+        "    return \"Whites\"\n",
+        "  if (sat < 0.25):\n",
+        "    return \"Grays\"\n",
+        "  if (hue < 30):\n",
+        "    return \"Reds\"\n",
+        "  if (hue < 90):\n",
+        "    return \"Yellows\"\n",
+        "  if (hue < 150):\n",
+        "    return \"Greens\"\n",
+        "  if (hue < 210):\n",
+        "    return \"Cyans\"\n",
+        "  if (hue < 270):\n",
+        "    return \"Blues\"\n",
+        "  if (hue < 330):\n",
+        "    return \"Magentas\"\n",
+        "  return \"Reds\""
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     }
   ]
