Add cropimg function

--- a/Color_distinguish.ipynb
+++ b/Color_distinguish.ipynb
@@ -27,30 +27,30 @@
       "cell_type": "code",
       "metadata": {
         "id": "YaW6OT8hdZZx",
-        "outputId": "f82a4994-84a4-4fe5-a012-8beb9cbc8d48",
+        "outputId": "2bbd193c-8d83-4d14-d849-809b227e51e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 222
         }
       },
       "source": [
         "!wget https://4.bp.blogspot.com/-ukjUU_JJ6y0/WxVha1617oI/AAAAAAAAXr8/xrXPfl2DWyE-WdxvBct-HCLYt_cwbO5owCLcBGAs/s400/yourname-02m22s.png"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2020-10-21 13:30:05--  https://4.bp.blogspot.com/-ukjUU_JJ6y0/WxVha1617oI/AAAAAAAAXr8/xrXPfl2DWyE-WdxvBct-HCLYt_cwbO5owCLcBGAs/s400/yourname-02m22s.png\n",
-            "Resolving 4.bp.blogspot.com (4.bp.blogspot.com)... 108.177.125.132, 2404:6800:4008:c01::84\n",
-            "Connecting to 4.bp.blogspot.com (4.bp.blogspot.com)|108.177.125.132|:443... connected.\n",
+            "--2020-10-28 10:01:46--  https://4.bp.blogspot.com/-ukjUU_JJ6y0/WxVha1617oI/AAAAAAAAXr8/xrXPfl2DWyE-WdxvBct-HCLYt_cwbO5owCLcBGAs/s400/yourname-02m22s.png\n",
+            "Resolving 4.bp.blogspot.com (4.bp.blogspot.com)... 74.125.203.132, 2404:6800:4008:c03::84\n",
+            "Connecting to 4.bp.blogspot.com (4.bp.blogspot.com)|74.125.203.132|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 161458 (158K) [image/png]\n",
             "Saving to: ‘yourname-02m22s.png’\n",
             "\n",
             "yourname-02m22s.png 100%[===================>] 157.67K  --.-KB/s    in 0.002s  \n",
             "\n",
-            "2020-10-21 13:30:06 (84.6 MB/s) - ‘yourname-02m22s.png’ saved [161458/161458]\n",
+            "2020-10-28 10:01:46 (67.1 MB/s) - ‘yourname-02m22s.png’ saved [161458/161458]\n",
             "\n"
           ],
           "name": "stdout"
@@ -61,7 +61,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "gxRXWYt1KREt",
-        "outputId": "dad8d12c-22a3-48e0-b9ea-36705849dc36",
+        "outputId": "b0c14bc5-a400-4d40-f1b7-b40c91c8c680",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 240
@@ -76,7 +76,7 @@
         "plt.ylabel('original')\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -187,6 +187,78 @@
         "  return \"Reds\""
       ],
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C45HzJnfqwfK"
+      },
+      "source": [
+        "###Crop Image###\n",
+        "return รูป ใช้ pillow\n",
+        "\n",
+        "crop_img(path,aw,bh,dw,ch)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O_CoPFbif_wC"
+      },
+      "source": [
+        "from PIL import Image\n",
+        "def cropimg(path,aw,bh,dw,ch):\n",
+        "  image = Image.open(path)\n",
+        "  width, height = image.size\n",
+        "  a,b,c,d = getObjPosition(width,height,aw,bh,dw,ch)\n",
+        "  x,y = getStartPosition(a,b,c,d)\n",
+        "  box = (x, y, x+d, y+c)\n",
+        "  cropped_image = image.crop(box)\n",
+        "  return cropped_image"
+      ],
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cTQ1QsBDTF9I"
+      },
+      "source": [
+        "def getObjPosition(width,height,aw,bh,dw,ch):\n",
+        "  a = aw*width\n",
+        "  b = bh*height\n",
+        "  c = ch*height\n",
+        "  d = dw*width\n",
+        "  return a,b,c,d"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "57LQM2IkXinU"
+      },
+      "source": [
+        "def getStartPosition(a,b,c,d):\n",
+        "  x = a-d/2\n",
+        "  y = b-c/2\n",
+        "  return(x,y)"
+      ],
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lTMRibdIjyMj"
+      },
+      "source": [
+        "img = cropimg(\"yourname-02m22s.png\",0.458137, 0.594340, 0.194575, 0.446541)"
+      ],
+      "execution_count": 22,
       "outputs": []
     }
   ]
